--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/style.css" />
   <link rel="icon" href="images/dog-img.jpg">
   
-  <title>TinDog</title>
+  <title>TinDog | Tinder to Dogs</title>
 </head>
 
 <body>
